--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,8 +49,7 @@
 .card {
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
+  background: linear-gradient(45deg, hsla(0, 0%, 5%, 1) 56%, rgb(90, 3, 157) 100%);  border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
 }
 
