--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,12 +87,8 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(90deg, hsla(97, 100%, 63%, 1) 0%, hsla(294, 100%, 55%, 1) 100%), 
+
 }
 
 a {
@@ -103,5 +99,8 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-  }
+
+}
+
+
 }
